--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1515,7 +1515,7 @@ a {
 .cid-sc4YZuh0MU {
   padding-top: 150px;
   padding-bottom: 90px;
-  background-color: #fafafa;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-sc4YZuh0MU .container {
   max-width: 1500px;
@@ -1636,7 +1636,7 @@ a {
   }
 }
 .cid-selq00pG1c {
-  padding-top: 0rem;
+  padding-top: 1rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
@@ -1692,7 +1692,7 @@ a {
   }
 }
 .cid-sc52xDNF3M {
-  padding-top: 2rem;
+  padding-top: 3rem;
   padding-bottom: 1rem;
   background: #ffffff;
 }
