--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -807,6 +807,16 @@ a {
     padding-right: 4rem;
   }
 }
+.cid-selpZgHLQm .mbr-text,
+.cid-selpZgHLQm .social-row {
+  color: #232323;
+}
+.cid-selpZgHLQm .card-subtitle {
+  color: #000000;
+}
+.cid-selpZgHLQm .card-title {
+  color: #232323;
+}
 .cid-selq00pG1c {
   padding-top: 1rem;
   padding-bottom: 0rem;
