--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3210,7 +3210,7 @@ a {
 .cid-sj4pbCUtxx {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/emre-gencer-nzmejsrmc8u-unsplash-2000x1333.jpg");
+  background-image: url("../../../assets/images/coffee-overlay2-2000x1333.jpg");
 }
 .cid-sj4pbCUtxx h2,
 .cid-sj4pbCUtxx h3,
@@ -3288,7 +3288,7 @@ a {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #2c1616;
+  background: #172eca;
   opacity: 0.5;
   z-index: 0;
 }
@@ -3469,7 +3469,7 @@ a {
 .cid-sc5Vm1DhgI {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/pexels-riccardo-bresciani-301930-2000x1322.jpg");
+  background-image: url("../../../assets/images/ceiling-overlay-2000x1525.jpg");
 }
 .cid-sc5Vm1DhgI h2,
 .cid-sc5Vm1DhgI h3,
@@ -3547,7 +3547,7 @@ a {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #2c1616;
+  background: #ba1919;
   opacity: 0.5;
   z-index: 0;
 }
