--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -29,19 +29,19 @@ body {
 }
 .display-4 {
   font-family: 'Oxygen', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.5;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.5rem;
+  font-size: 1.375rem;
 }
 .display-5 {
-  font-family: 'Oxygen', sans-serif;
-  font-size: 1.8rem;
+  font-family: 'Source Serif Pro', serif;
+  font-size: 1.7rem;
   line-height: 1.5;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.25rem;
+  font-size: 2.125rem;
 }
 .display-7 {
   font-family: 'Oxygen', sans-serif;
@@ -73,14 +73,14 @@ body {
     line-height: calc( 1.3 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.96rem;
-    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.88rem;
+    font-size: calc( 1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.44rem;
-    font-size: calc( 1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.36rem;
+    font-size: calc( 1.245rem + (1.7 - 1.245) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.245rem + (1.7 - 1.245) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
     font-size: 0.96rem;
@@ -589,12 +589,12 @@ a:hover {
 /* Scroll to top button*/
 .form-control {
   font-family: 'Oxygen', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.5;
   font-weight: 400;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.5rem;
+  font-size: 1.375rem;
 }
 .form-control:hover,
 .form-control:focus {
@@ -603,12 +603,12 @@ a:hover {
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'Oxygen', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.5;
   font-weight: 400;
 }
 .form-control:-webkit-input-placeholder > .mbr-iconfont {
-  font-size: 1.5rem;
+  font-size: 1.375rem;
 }
 blockquote {
   border-color: #4300f4;
@@ -819,7 +819,7 @@ a {
 }
 .cid-selq00pG1c {
   padding-top: 1rem;
-  padding-bottom: 0rem;
+  padding-bottom: 1rem;
   background-color: #ffffff;
 }
 .cid-selq00pG1c .card:not(:nth-last-child(1)) {
@@ -875,7 +875,7 @@ a {
 }
 .cid-sc52xDNF3M {
   padding-top: 3rem;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   background-image: url("../../../assets/images/background1-1.jpg");
 }
 .cid-sc52xDNF3M .team-card {
@@ -944,7 +944,7 @@ a {
 .cid-skFFsOBrPA {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fafafa;
+  background-color: #4300f4;
 }
 .cid-skFFsOBrPA .mbr-section-subtitle {
   letter-spacing: 1px;
@@ -963,7 +963,7 @@ a {
   display: inline-block;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont {
-  color: #4300f4;
+  color: #ffffff;
   font-size: 1.5rem;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont:hover {
@@ -985,19 +985,19 @@ a {
   width: 100%;
   padding: .3rem .5rem;
   background: #ffffff;
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-webkit-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-ms-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .col + .mbr-section-btn .btn,
 .cid-skFFsOBrPA .col-auto + .mbr-section-btn .btn {
@@ -1032,12 +1032,15 @@ a {
   }
 }
 .cid-skFFsOBrPA .mbr-section-title {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-skFE7GcCCr {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #4300f4;
+}
+.cid-skFE7GcCCr .media-container-row .mbr-text {
+  color: #bbbbbb;
 }
 .cid-sc58E5EGgv.popup-builder {
   background-color: #ffffff;
@@ -2546,7 +2549,7 @@ a {
 .cid-skFFsOBrPA {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fafafa;
+  background-color: #4300f4;
 }
 .cid-skFFsOBrPA .mbr-section-subtitle {
   letter-spacing: 1px;
@@ -2565,7 +2568,7 @@ a {
   display: inline-block;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont {
-  color: #4300f4;
+  color: #ffffff;
   font-size: 1.5rem;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont:hover {
@@ -2587,19 +2590,19 @@ a {
   width: 100%;
   padding: .3rem .5rem;
   background: #ffffff;
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-webkit-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-ms-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .col + .mbr-section-btn .btn,
 .cid-skFFsOBrPA .col-auto + .mbr-section-btn .btn {
@@ -2634,7 +2637,7 @@ a {
   }
 }
 .cid-skFFsOBrPA .mbr-section-title {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-selJrJlxZI {
   z-index: 1000;
@@ -2989,9 +2992,12 @@ a {
   }
 }
 .cid-skFE7GcCCr {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #4300f4;
+}
+.cid-skFE7GcCCr .media-container-row .mbr-text {
+  color: #bbbbbb;
 }
 .cid-scFTYEIGhk {
   padding-top: 135px;
@@ -3307,7 +3313,7 @@ a {
 .cid-sc5Vm1DhgI {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/ceiling-overlay-2000x1525.jpg");
+  background-image: url("../../../assets/images/ceiling-overlay-2-2000x1526.jpg");
 }
 .cid-sc5Vm1DhgI h2,
 .cid-sc5Vm1DhgI h3,
@@ -3802,7 +3808,7 @@ a {
 .cid-skFFsOBrPA {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fafafa;
+  background-color: #4300f4;
 }
 .cid-skFFsOBrPA .mbr-section-subtitle {
   letter-spacing: 1px;
@@ -3821,7 +3827,7 @@ a {
   display: inline-block;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont {
-  color: #4300f4;
+  color: #ffffff;
   font-size: 1.5rem;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont:hover {
@@ -3843,19 +3849,19 @@ a {
   width: 100%;
   padding: .3rem .5rem;
   background: #ffffff;
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-webkit-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-ms-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .col + .mbr-section-btn .btn,
 .cid-skFFsOBrPA .col-auto + .mbr-section-btn .btn {
@@ -3890,12 +3896,15 @@ a {
   }
 }
 .cid-skFFsOBrPA .mbr-section-title {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-skFE7GcCCr {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #4300f4;
+}
+.cid-skFE7GcCCr .media-container-row .mbr-text {
+  color: #bbbbbb;
 }
 .cid-skFB7aQyUl {
   padding-top: 135px;
@@ -3981,7 +3990,7 @@ a {
 .cid-skFFsOBrPA {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fafafa;
+  background-color: #4300f4;
 }
 .cid-skFFsOBrPA .mbr-section-subtitle {
   letter-spacing: 1px;
@@ -4000,7 +4009,7 @@ a {
   display: inline-block;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont {
-  color: #4300f4;
+  color: #ffffff;
   font-size: 1.5rem;
 }
 .cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont:hover {
@@ -4022,19 +4031,19 @@ a {
   width: 100%;
   padding: .3rem .5rem;
   background: #ffffff;
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-webkit-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control::-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-moz-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .form-control:-ms-input-placeholder {
-  color: #d8d7d7;
+  color: #353535;
 }
 .cid-skFFsOBrPA .col + .mbr-section-btn .btn,
 .cid-skFFsOBrPA .col-auto + .mbr-section-btn .btn {
@@ -4069,7 +4078,7 @@ a {
   }
 }
 .cid-skFFsOBrPA .mbr-section-title {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-selJrJlxZI {
   z-index: 1000;
@@ -4424,9 +4433,12 @@ a {
   }
 }
 .cid-skFE7GcCCr {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #4300f4;
+}
+.cid-skFE7GcCCr .media-container-row .mbr-text {
+  color: #bbbbbb;
 }
 .cid-selJrJlxZI {
   z-index: 1000;
@@ -4798,6 +4810,107 @@ a {
 .cid-sc4TzXTOu7 .mbr-section-btn {
   color: #ffffff;
 }
+.cid-skFFsOBrPA {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #4300f4;
+}
+.cid-skFFsOBrPA .mbr-section-subtitle {
+  letter-spacing: 1px;
+  margin-bottom: 1.5rem;
+  color: #cccccc;
+}
+.cid-skFFsOBrPA .first-column .mbr-text {
+  margin: 0;
+}
+.cid-skFFsOBrPA .icons-wrapper ul {
+  margin: 0;
+  padding: 0;
+}
+.cid-skFFsOBrPA .icons-wrapper ul li {
+  margin-right: 1.25rem;
+  display: inline-block;
+}
+.cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont {
+  color: #ffffff;
+  font-size: 1.5rem;
+}
+.cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont:hover {
+  color: #878787;
+}
+.cid-skFFsOBrPA .form-group {
+  max-width: 55%;
+}
+.cid-skFFsOBrPA .form-group,
+.cid-skFFsOBrPA .mbr-section-btn {
+  margin: 0;
+  padding: 0;
+  display: -webkit-flex;
+}
+.cid-skFFsOBrPA .form-control {
+  font-size: .9rem;
+  border: none;
+  border-radius: 0;
+  width: 100%;
+  padding: .3rem .5rem;
+  background: #ffffff;
+  color: #353535;
+}
+.cid-skFFsOBrPA .form-control::-webkit-input-placeholder {
+  color: #353535;
+}
+.cid-skFFsOBrPA .form-control::-moz-placeholder {
+  color: #353535;
+}
+.cid-skFFsOBrPA .form-control:-moz-placeholder {
+  color: #353535;
+}
+.cid-skFFsOBrPA .form-control:-ms-input-placeholder {
+  color: #353535;
+}
+.cid-skFFsOBrPA .col + .mbr-section-btn .btn,
+.cid-skFFsOBrPA .col-auto + .mbr-section-btn .btn {
+  margin: 0 !important;
+  height: 100%;
+  border-radius: 0px !important;
+  padding: 0 2.2rem !important;
+}
+.cid-skFFsOBrPA .dragArea > *:nth-last-child(2).col,
+.cid-skFFsOBrPA .dragArea > *:nth-last-child(2).col-auto,
+.cid-skFFsOBrPA .col + .mbr-section-btn,
+.cid-skFFsOBrPA .col-auto + .mbr-section-btn {
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0;
+}
+@media (max-width: 991px) {
+  .cid-skFFsOBrPA .first-column,
+  .cid-skFFsOBrPA .second-column {
+    padding-bottom: 2rem;
+  }
+  .cid-skFFsOBrPA .mbr-form .row {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-skFFsOBrPA .first-column,
+  .cid-skFFsOBrPA .second-column,
+  .cid-skFFsOBrPA .third-column {
+    text-align: center;
+  }
+}
+.cid-skFFsOBrPA .mbr-section-title {
+  color: #ffffff;
+}
+.cid-skFE7GcCCr {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #4300f4;
+}
+.cid-skFE7GcCCr .media-container-row .mbr-text {
+  color: #bbbbbb;
+}
 .cid-scbObIuMz4.popup-builder {
   background-color: #ffffff;
 }
@@ -5078,102 +5191,4 @@ a {
   flex: 0 0 auto;
   width: auto;
   max-width: 100%;
-}
-.cid-skFFsOBrPA {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #fafafa;
-}
-.cid-skFFsOBrPA .mbr-section-subtitle {
-  letter-spacing: 1px;
-  margin-bottom: 1.5rem;
-  color: #cccccc;
-}
-.cid-skFFsOBrPA .first-column .mbr-text {
-  margin: 0;
-}
-.cid-skFFsOBrPA .icons-wrapper ul {
-  margin: 0;
-  padding: 0;
-}
-.cid-skFFsOBrPA .icons-wrapper ul li {
-  margin-right: 1.25rem;
-  display: inline-block;
-}
-.cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont {
-  color: #4300f4;
-  font-size: 1.5rem;
-}
-.cid-skFFsOBrPA .icons-wrapper ul li .mbr-iconfont:hover {
-  color: #878787;
-}
-.cid-skFFsOBrPA .form-group {
-  max-width: 55%;
-}
-.cid-skFFsOBrPA .form-group,
-.cid-skFFsOBrPA .mbr-section-btn {
-  margin: 0;
-  padding: 0;
-  display: -webkit-flex;
-}
-.cid-skFFsOBrPA .form-control {
-  font-size: .9rem;
-  border: none;
-  border-radius: 0;
-  width: 100%;
-  padding: .3rem .5rem;
-  background: #ffffff;
-  color: #d8d7d7;
-}
-.cid-skFFsOBrPA .form-control::-webkit-input-placeholder {
-  color: #d8d7d7;
-}
-.cid-skFFsOBrPA .form-control::-moz-placeholder {
-  color: #d8d7d7;
-}
-.cid-skFFsOBrPA .form-control:-moz-placeholder {
-  color: #d8d7d7;
-}
-.cid-skFFsOBrPA .form-control:-ms-input-placeholder {
-  color: #d8d7d7;
-}
-.cid-skFFsOBrPA .col + .mbr-section-btn .btn,
-.cid-skFFsOBrPA .col-auto + .mbr-section-btn .btn {
-  margin: 0 !important;
-  height: 100%;
-  border-radius: 0px !important;
-  padding: 0 2.2rem !important;
-}
-.cid-skFFsOBrPA .dragArea > *:nth-last-child(2).col,
-.cid-skFFsOBrPA .dragArea > *:nth-last-child(2).col-auto,
-.cid-skFFsOBrPA .col + .mbr-section-btn,
-.cid-skFFsOBrPA .col-auto + .mbr-section-btn {
-  padding-left: 0;
-  padding-right: 0;
-  margin: 0;
-}
-@media (max-width: 991px) {
-  .cid-skFFsOBrPA .first-column,
-  .cid-skFFsOBrPA .second-column {
-    padding-bottom: 2rem;
-  }
-  .cid-skFFsOBrPA .mbr-form .row {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-@media (max-width: 767px) {
-  .cid-skFFsOBrPA .first-column,
-  .cid-skFFsOBrPA .second-column,
-  .cid-skFFsOBrPA .third-column {
-    text-align: center;
-  }
-}
-.cid-skFFsOBrPA .mbr-section-title {
-  color: #000000;
-}
-.cid-skFE7GcCCr {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #4300f4;
 }
