--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3908,8 +3908,8 @@ a {
 }
 .cid-skFB7aQyUl {
   padding-top: 135px;
-  padding-bottom: 135px;
-  background-image: url("../../../assets/images/background1.jpg");
+  padding-bottom: 0px;
+  background-color: #efeeee;
 }
 .cid-skFB7aQyUl h4 {
   margin-bottom: 0;
@@ -3964,6 +3964,67 @@ a {
 }
 .cid-skFB7aQyUl .mbr-text,
 .cid-skFB7aQyUl .mbr-link-btn {
+  color: #767676;
+  text-align: center;
+}
+.cid-smzJmUvXKr {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #efeeee;
+}
+.cid-smzJmUvXKr h4 {
+  margin-bottom: 0;
+}
+.cid-smzJmUvXKr .card:hover img {
+  box-shadow: 0 10px 55px 5px rgba(110, 44, 180, 0.35);
+}
+.cid-smzJmUvXKr .btn[class*="-outline"] {
+  border: none;
+  padding: 0;
+  margin: 0 0.25rem!important;
+  box-shadow: none!important;
+}
+.cid-smzJmUvXKr .btn[class*="-outline"] span {
+  order: 2;
+  font-size: 1.1rem;
+  padding-top: 3px;
+  transition: padding 0.3s!important;
+}
+.cid-smzJmUvXKr .btn[class*="-outline"]:hover span {
+  padding-left: 10px;
+}
+.cid-smzJmUvXKr .btn[class*="-outline"]:hover {
+  background-color: transparent!important;
+  color: #4300f4 !important;
+  box-shadow: none!important;
+}
+.cid-smzJmUvXKr .btn[class*="-outline"]:active,
+.cid-smzJmUvXKr .btn[class*="-outline"]:focus {
+  background-color: transparent!important;
+  box-shadow: none!important;
+}
+.cid-smzJmUvXKr .card-box {
+  padding-top: 2rem;
+}
+.cid-smzJmUvXKr .card-wrapper {
+  height: 100%;
+}
+.cid-smzJmUvXKr .mbr-iconfont {
+  padding-left: 0.4rem;
+}
+.cid-smzJmUvXKr img {
+  transition: all 0.3s;
+  border-radius: 8px;
+}
+.cid-smzJmUvXKr .card-title {
+  color: #149dcc;
+}
+.cid-smzJmUvXKr .main-title {
+  color: #232323;
+  text-align: center;
+}
+.cid-smzJmUvXKr .mbr-text,
+.cid-smzJmUvXKr .mbr-link-btn {
   color: #767676;
   text-align: center;
 }
